# lyrs

./: Cargo.toml  README.md
crates/lyre/: Cargo.toml
crates/lyre/src/: lib.rs
crates/mcp300/: Cargo.toml
crates/mcp300/src/: lib.rs  mcp3004.rs  mcp3008.rs
src/: main.rs  pi.rs  raspberry_pi.rs
src/raspberry_pi/: mcp3008.rs
