[package]
name = "lyrs"
version = "0.1.0"
edition = "2021"
authors = ["Zac Harrold <zac@harrold.com.au>"]
license = "MIT / Apache-2.0"

[features]
default = []
raspberry_pi = ["dep:rppal", "dep:embedded-hal", "dep:embedded-hal-bus", "dep:mcp300"]

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "pi"
path = "src/pi.rs"

[workspace]
members = [
  "crates/*",
]

[dependencies]
anyhow = "1.0.79"
cpal = "0.15.2"
fundsp = "0.16.0"
funutd = "0.14.0"
winit = "0.29.10"

[dependencies.lyre ]
path = "crates/lyre"

[dependencies.mcp300 ]
optional = true
path = "crates/mcp300"

[dependencies.rppal]
optional = true
version = "0.17.1"
features = ["hal"]

[dependencies.embedded-hal ]
optional = true
version = "1"

[dependencies.embedded-hal-bus ]
optional = true
version = "0.1.0"
